Mon May 22 19:06:41 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/Log_Record.cpp (operator<<, operator>>): Have to use a different
          CDR array method when ACE_USES_WCHAR.

Mon May 22 09:04:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * netsvcs/lib/Client_Logging_Handler.cpp:
          Fixed compile error on Solaris

Mon May 22 04:53:29 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tests/Signal_Test.cpp:

          The change:
          Sat May 20 15:10:55 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

          Was not enough to get this test working on all platforms.

          Revert to using ACE_Sig_Guard in worker_child().  Handle the
          SIGINT race condition by raising it if and only if the child
          was not shut down by the parent.

Sun May 21 13:46:49 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tests/Service_Config_Test.cpp:

          Fixing Windows test failures, because errno gets overriden
          between Service Repository::insert() and testLimits(). Most
          likely, it happens in ace_yyparse (), however the existing
          mechanism for reporting parser errors does not allow for
          reliably propagating the cause of the error. Removing the test
          for the cause of the error and simply reporting the error, if it
          had occured.

Sat May 20 15:10:55 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tests/Signal_Test.cpp:

          Changed synchronous tests to block signals at the top level.
          This had been done with a ACE_Sig_Guard, but that lead to a race
          condition between when the guard was release and the delivery of
          the SIGINT the client sends to itself.  The SIGINT would then be
          handled by the default handler, which terminated the process
          before the "Ending" message was written to the log.

          #if'd out the ACE_DEBUG, etc. invocations from handle_signal().