@@ -1,3 +1,11 @@
+Mon May 22 21:13:15 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>
+
+        * bin/diff-builds.pl:
+
+          Updated to allow diff between the tests failures today and on a
+          specified date, for the clean builds (or, all the builds from
+          the build score).
+
 Mon May 22 19:06:41 UTC 2006  Steve Huston  <shuston@riverace.com>
 
         * ace/Log_Record.cpp (operator<<, operator>>): Have to use a different
